--- a/DataStructures/DataStructures.Tests/DataStructures.Tests.csproj
+++ b/DataStructures/DataStructures.Tests/DataStructures.Tests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LinkedList\LinkedListTests.cs" />
+    <Compile Include="List\ListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
